--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,15 @@ apiai==1.2.3
 certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
+dnspython==1.16.0
 Flask==1.1.1
+gunicorn==19.9.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
 numpy==1.17.3
+pymongo==3.9.0
 requests==2.22.0
 urllib3==1.25.6
 Werkzeug==0.16.0
